infra/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
spec:
  tls:
    - hosts:
      - localhost:3001
  rules:
    - host: localhost:3001
      http:
        paths:
          - path: /api/e-shop/?(.*)
            pathType: Prefix
            backend:
              service:
                name: e-shop-srv
                port:
                  number: 5000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontenduser-srv
                port:
                  number: 5000
